[gd_scene load_steps=7 format=2]

[ext_resource path="res://!assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://!assets/font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://main/main_menu.gd" type="Script" id=3]
[ext_resource path="res://!assets/font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 217.0
margin_top = 102.0
margin_right = 784.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 2 )
text = "Autonomous Agents"

[node name="Label2" type="Label" parent="."]
margin_left = 160.0
margin_top = 195.0
margin_right = 893.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 4 )
text = "This project is based on Daniel Shiffman's book-
Nature of Code, specifically chapter 6 about Autonomous Agents"
align = 1

[node name="Copyright" type="LinkButton" parent="."]
margin_left = 372.0
margin_top = 561.0
margin_right = 625.0
margin_bottom = 581.0
custom_fonts/font = SubResource( 3 )
text = "Â© copyright Yosua Nicolaus 2023"

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 200.0
margin_top = 282.0
margin_right = 864.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 2 )
text = "https://natureofcode.com/book/chapter-6-autonomous-agents/"

[node name="ButtonAnt" type="Button" parent="."]
margin_left = 318.0
margin_top = 476.0
margin_right = 674.0
margin_bottom = 511.0
custom_fonts/font = ExtResource( 4 )
text = "Ant Colony"

[node name="ButtonBall" type="Button" parent="."]
margin_left = 318.0
margin_top = 363.0
margin_right = 674.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 4 )
text = "Separate Ball simulation"

[node name="ButtonAgents" type="Button" parent="."]
margin_left = 318.0
margin_top = 418.0
margin_right = 674.0
margin_bottom = 453.0
custom_fonts/font = ExtResource( 4 )
text = "Autonomous Agents"

[connection signal="pressed" from="Copyright" to="." method="_on_Copyright_pressed"]
[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="ButtonAnt" to="." method="_on_ButtonAnt_pressed"]
[connection signal="pressed" from="ButtonBall" to="." method="_on_ButtonBall_pressed"]
[connection signal="pressed" from="ButtonAgents" to="." method="_on_ButtonAgents_pressed"]
